FullQa New/src/LeanData/objects/Reporting_Log__c.object
<CustomObject>
    <fields>
        <fullName>Attribution_Errors__c</fullName>
        <label>Attribution Errors</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Batch_Summary__c</fullName>
        <label>Batch Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Batches_With_Errors__c</fullName>
        <label>Batches With Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Settings_2__c</fullName>
        <label>Full Settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Full_Settings__c</fullName>
        <label>Full Settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Date_Time__c</fullName>
        <label>Log DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Type__c</fullName>
        <label>Log Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Touch_Metrics__c</fullName>
        <label>Marketing Touch Metrics</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Settings__c</fullName>
        <label>Old Settings</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Run_End__c</fullName>
        <label>Run End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Run_Start__c</fullName>
        <label>Run Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Run_Type__c</fullName>
        <label>Run Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settings_Page__c</fullName>
        <label>Settings Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Settings__c</fullName>
        <label>Updated Settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Reporting Log</relationshipLabel>
        <relationshipName>Reporting_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reporting Log</label>
    <nameField>
        <displayFormat>CIS-{000000000}</displayFormat>
        <label>Reporting Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>